# Reinforcement-learning-agents-in-N-of-1-trials

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml
data/: 2023-09-20-series.json
notebooks/: simulate_data.ipynb
src/nof1rl4endo/: __init__.py  basic_types.py  metrics.py  series_of_simulations_data.py  simulation_data.py
